; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kernel/extr_vtime.c_account_system_index_scaled.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kernel/extr_vtime.c_account_system_index_scaled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.task_struct*, i32, i32)* @account_system_index_scaled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @account_system_index_scaled(%struct.task_struct* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @scale_vtime(i32 %7)
  %9 = call i64 @cputime_to_nsecs(i32 %8)
  %10 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %11 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %9
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %11, align 4
  %16 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @cputime_to_nsecs(i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @account_system_index_time(%struct.task_struct* %16, i64 %18, i32 %19)
  ret void
}

declare dso_local i64 @cputime_to_nsecs(i32) #1

declare dso_local i32 @scale_vtime(i32) #1

declare dso_local i32 @account_system_index_time(%struct.task_struct*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
